--- a/20210322_Dearmesoon/css/layout.css
+++ b/20210322_Dearmesoon/css/layout.css
@@ -1293,13 +1293,13 @@ section h2 {
 }
 div[class*="sub01_"] .visual-sub {
     color: #fff;
-    background: url("../img/Img_sub01_visual.png") no-repeat center;
+    background: url("../img/img_sub01_visual.png") no-repeat center;
     -webkit-background-size: cover;
     background-size: cover;
 }
 div[class*="sub02_"] .visual-sub {
     color: #fff;
-    background: url("../img/Img_sub02_visual.png") no-repeat center;
+    background: url("../img/img_sub02_visual.png") no-repeat center;
     -webkit-background-size: cover;
     background-size: cover;
 }
