--- a/css/layout.css
+++ b/css/layout.css
@@ -31,6 +31,9 @@ html {
 .display-w {
     display: block!important;
 }
+.display-inline-w {
+    display: inline-block!important;
+}
 .display-m {
     display: none!important;
 }
@@ -859,6 +862,9 @@ section h2 {
 }
 @media (max-width:1024px) {
     .display-w {
+        display: none!important;
+    }
+    .display-inline-w {
         display: none!important;
     }
     .display-m {
